# fugle-realtime-python

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml
fugle_realtime/: __init__.py  base_client.py  intraday.py
fugle_realtime/http_client/: historical.py  http_client.py  intraday.py
fugle_realtime/intraday/: __init__.py  chart.py  meta.py  quote.py  trades.py
fugle_realtime/websocket_client/: __init__.py  intraday.py  websocket_client.py  ws.py
tests/: test_fugle_realtime.py  test_fugle_realtime_py.py  test_http_client.py  test_intraday.py  test_websocket_client.py
