[tool.poetry]
name = "fugle-realtime"
version = "0.2.10"
description = "Fugle Realtime"
license = "MIT"
readme = "README.md"
homepage = "https://developer.fugle.tw/realtime"
repository = "https://github.com/fugle-dev/fugle-realtime-py"
documentation = "https://developer.fugle.tw/realtime/document"
keywords = ["fugle", "realtime", "taiwan", "twse", "tpex", "stock", "fortuna"]
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.2"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.16"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
