[tool.poetry]
name = "fugle-realtime"
version = "0.3.0"
description = "Fugle Realtime API client library for Python"
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
