[tool.poetry]
name = "fugle-realtime"
version = "0.3.2"
description = "Fugle Realtime API client library for Python"
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fugle-dev/fugle-realtime-py#readme"
repository = "https://github.com/fugle-dev/fugle-realtime-py"
documentation = "https://developer.fugle.tw"
keywords = ["fugle", "realtime", "stock"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
websocket-client = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
